# browser

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  INTERFACES.md  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml
.windsurf/workflows/: work.md
src/: cookie.rs  css.rs  error.rs  font.rs  history.rs  html.rs  image.rs  layout.rs  main.rs  network.rs  paint.rs  renderer.rs  storage.rs  style.rs  url.rs  window.rs
