[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
url = "2.5"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
winit = "0.30"
softbuffer = "0.4"

[dev-dependencies]
criterion = "0.5"  # Benchmarking
proptest = "1.4"   # Property-based testing

# Development tools (install with: cargo install cargo-tarpaulin cargo-audit)

